--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
 # 서울 날씨를 5분마다 csv로 저장!!
 name: Pokemon Data
 on: # 작업을 수행하는 조건
-  schedule: # 스케쥴링
-    - cron: "*/5 * * * *" # 매 5분마다
+#  schedule: # 스케쥴링
+  #  - cron: "*/5 * * * *" # 매 5분마다
   workflow_dispatch: # 수동 실행 가능
 jobs: # 실행할 작업을 정의
   request_weather:
